Bug 490213 - Settings search highlight obscures text
Summary: Settings search highlight obscures text
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.05.2
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-13 08:30 UTC by deadmeu
Modified: 2024-07-17 12:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
example (87.49 KB, image/png)
2024-07-13 08:30 UTC, deadmeu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description deadmeu 2024-07-13 08:30:24 UTC
Created attachment 171620 [details]
example

SUMMARY
Not sure if this is necessarily a Kate issue but the Search feature in the settings dialog will highlight text. If the highlighted text is of a tab, the tab text cannot be read.

I am using the Breeze Dark system theme.

See attached screenshot as an example.

STEPS TO REPRODUCE
1. Open Settings > Configure Kate
2. In the top-left corner, search for "Indentation"
3. Inside "Editing Options" notice the "Indentation" tab is completely highlighted and the text cannot be read

OBSERVED RESULT
Setting tab text is unreadable.

EXPECTED RESULT
The text should still be readable when highlighted.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.1.2
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.2
Kernel Version: 6.9.8-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 1 TraceyC 2024-07-15 21:42:32 UTC
I confirm this exact behavior on Solus Plasma 6 (Breeze Dark) and KDE Neon (stock theme)
Comment 2 Waqar Ahmed 2024-07-17 12:28:17 UTC
Git commit d2b7f7413210ca36d2b896a965aefd7d9b91a99f by Waqar Ahmed.
Committed on 17/07/2024 at 12:19.
Pushed by waqar into branch 'master'.

Fix multiple overlays being installed over tab

M  +13   -1    src/kpageview.cpp

https://invent.kde.org/frameworks/kwidgetsaddons/-/commit/d2b7f7413210ca36d2b896a965aefd7d9b91a99f