Fix multiple overlays being installed over tab

BUG: 490213